k8s/policies/network/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: vuln-alert
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
